[gd_scene load_steps=6 format=3 uid="uid://plateau_sample_basemap"]

[ext_resource type="Script" path="res://samples/basemap_sample.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://japanese_font" path="res://fonts/japanese_font.tres" id="2_font"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_sky"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.8, 0.8, 0.8, 1)

[node name="BasemapSample" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 500, 500)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 100, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sky")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ControlPanel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 280.0
offset_bottom = 340.0

[node name="Title" type="Label" parent="UI/ControlPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 260.0
offset_bottom = 25.0
text = "Basemap Settings"
horizontal_alignment = 1

[node name="LatLabel" type="Label" parent="UI/ControlPanel"]
offset_left = 10.0
offset_top = 35.0
offset_right = 80.0
offset_bottom = 55.0
text = "Latitude:"

[node name="LatSpin" type="SpinBox" parent="UI/ControlPanel"]
offset_left = 85.0
offset_top = 33.0
offset_right = 260.0
offset_bottom = 57.0
min_value = -90.0
max_value = 90.0
step = 0.0001
value = 35.6812

[node name="LonLabel" type="Label" parent="UI/ControlPanel"]
offset_left = 10.0
offset_top = 65.0
offset_right = 80.0
offset_bottom = 85.0
text = "Longitude:"

[node name="LonSpin" type="SpinBox" parent="UI/ControlPanel"]
offset_left = 85.0
offset_top = 63.0
offset_right = 260.0
offset_bottom = 87.0
min_value = -180.0
max_value = 180.0
step = 0.0001
value = 139.7671

[node name="ZoomLabel" type="Label" parent="UI/ControlPanel"]
offset_left = 10.0
offset_top = 95.0
offset_right = 80.0
offset_bottom = 115.0
text = "Zoom:"

[node name="ZoomSpin" type="SpinBox" parent="UI/ControlPanel"]
offset_left = 85.0
offset_top = 93.0
offset_right = 160.0
offset_bottom = 117.0
min_value = 1.0
max_value = 18.0
value = 16.0

[node name="RangeLabel" type="Label" parent="UI/ControlPanel"]
offset_left = 10.0
offset_top = 125.0
offset_right = 80.0
offset_bottom = 145.0
text = "Range:"

[node name="RangeSpin" type="SpinBox" parent="UI/ControlPanel"]
offset_left = 85.0
offset_top = 123.0
offset_right = 160.0
offset_bottom = 147.0
min_value = 0.0
max_value = 5.0
value = 2.0

[node name="DownloadGSIButton" type="Button" parent="UI/ControlPanel"]
offset_left = 10.0
offset_top = 160.0
offset_right = 260.0
offset_bottom = 185.0
text = "Download GSI Photo"

[node name="DownloadOSMButton" type="Button" parent="UI/ControlPanel"]
offset_left = 10.0
offset_top = 190.0
offset_right = 260.0
offset_bottom = 215.0
text = "Download OpenStreetMap"

[node name="ApplyToGroundButton" type="Button" parent="UI/ControlPanel"]
offset_left = 10.0
offset_top = 230.0
offset_right = 260.0
offset_bottom = 255.0
text = "Apply to Ground Mesh"

[node name="SaveTextureButton" type="Button" parent="UI/ControlPanel"]
offset_left = 10.0
offset_top = 260.0
offset_right = 260.0
offset_bottom = 285.0
text = "Save Texture PNG..."

[node name="CoordInfo" type="Label" parent="UI/ControlPanel"]
offset_left = 10.0
offset_top = 295.0
offset_right = 260.0
offset_bottom = 325.0
text = "Default: Tokyo Station"
horizontal_alignment = 1

[node name="PreviewPanel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 350.0
offset_right = 280.0
offset_bottom = 620.0

[node name="Title" type="Label" parent="UI/PreviewPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 260.0
offset_bottom = 25.0
text = "Preview"
horizontal_alignment = 1

[node name="PreviewTexture" type="TextureRect" parent="UI/PreviewPanel"]
offset_left = 10.0
offset_top = 30.0
offset_right = 260.0
offset_bottom = 260.0
expand_mode = 1
stretch_mode = 5

[node name="LogPanel" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0

[node name="Title" type="Label" parent="UI/LogPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 390.0
offset_bottom = 25.0
text = "Log"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/LogPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 400.0
offset_bottom = -10.0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LogLabel" type="RichTextLabel" parent="UI/LogPanel/ScrollContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_font")
bbcode_enabled = true
fit_content = true
scroll_following = true
